@startuml
title SO DO LOP 3 TANG - THANH TOAN TRA PHONG
top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam classBorderColor #7F8C8D

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHThanhToanTraPhong #BFE8BA {
    - txtTimKiemPhieu: TextBox
    - grvPhieuDoiSoatDaChot: GridView
    - pnlChiTietDoiSoat: Panel
    - lblMaPDS: Label
    - lblHoTenKhachHang: Label
    - lblPhong: Label
    - lblTienCoc: Label
    - lblTongKhauTru: Label
    - lblTienThuThem: Label
    - lblTienHoan: Label
    - lstPhuongThucThanhToan: ListBox
    - uplMinhChung: FileUpload
    - btnThuTien: Button
    - dlgThuTien: AlertDialog
    --
    + taiDanhSach()
    + chonPhieuDoiSoat(maPDS: String)
    + xacNhanThuTien()
  }
}
package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class ThanhToanTraPhong #F4E3A2 {
    + LayDSPhieuDoiSoatDaChot(): IReadOnlyList<PhieuDoiSoat>
    + LayChiTietPhieuDoiSoat(maPDS: String): Object
    + TienHanhThuTien(maPDS: String, phuongThuc: String, anhMinhChung: String, maNV: String): PhieuThu
  }
  class PhieuDoiSoat #F4E3A2 {
    + LayDSPhieuDoiSoatDaChot(): IReadOnlyList<PhieuDoiSoat>
    + LayChiTietPhieuDoiSoat(maPDS: String): PhieuDoiSoat
    + ChuyenSangDaTatToan(maPDS: String)
  }
  class HopDong #F4E3A2 {
    + LayThongTinLuuTru(maHD: String): HopDong
  }
  class PhieuCoc #F4E3A2 {
    + DocChiTiet(maPhieuCoc: String): PhieuCoc
  }
  class HoaDon #F4E3A2 {
    + LayDSHoaDonTheoPhieuDoiSoat(maPDS: String): IReadOnlyList<HoaDon>
  }
  class PhieuThu #F4E3A2 {
    + DaTonTaiChoPhieuDoiSoat(maPDS: String): Boolean
    + TaoPhieuThu(maPDS: String, soTien: Decimal, phuongThuc: String, anhMinhChung: String, maNV: String, thoiDiem: DateTime): PhieuThu
    + LuuPhieu()
  }
}
package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class PhieuDoiSoatDB #BFDCF0 {
    + GetDSPhieuDoiSoatDaChot(): IReadOnlyList<PhieuDoiSoat>
    + GetPhieuDoiSoatTheoMaPDS(maPDS: String): PhieuDoiSoat
    + UpdateTrangThai(maPDS: String, trangThaiHienTai: String, trangThaiMoi: String): Boolean
  }
  class HopDongDB #BFDCF0 {
    + LayThongTinLuuTru(maHD: String): HopDong
  }
  class PhieuCocDB #BFDCF0 {
    + DocChiTietHeThong(maPhieuCoc: String): PhieuCoc
  }
  class HoaDonDB #BFDCF0 {
    + GetDSHoaDonTheoMaPDS(maPDS: String): IReadOnlyList<HoaDon>
  }
  class PhieuThuDB #BFDCF0 {
    + TonTaiTheoMaPhieuDoiSoat(maPDS: String): Boolean
    + InsertPhieuThu(phieuThu: PhieuThu)
  }
}

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
PhieuThu -[hidden]down- PhieuDoiSoatDB
MHThanhToanTraPhong o-down- ThanhToanTraPhong
ThanhToanTraPhong o-- PhieuDoiSoat
ThanhToanTraPhong o-- HopDong
ThanhToanTraPhong o-- PhieuCoc
ThanhToanTraPhong o-- HoaDon
ThanhToanTraPhong o-- PhieuThu
PhieuDoiSoat o-down- PhieuDoiSoatDB
HopDong o-down- HopDongDB
PhieuCoc o-down- PhieuCocDB
HoaDon o-down- HoaDonDB
PhieuThu o-down- PhieuThuDB
@enduml
